TP/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: echoserver

spec:
  containers:
    - name: echoserver
      image: registry.cluster.wik.cloud/public/echo
      ports:
        - containerPort: 8080
