TP/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: api
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-service-api
                port:
                  number: 80
